# OpenUxAS

./: .gitignore  .gitmodules  README.md  install_prerequisites.sh  meson.build  meson_options.txt  mesoncross  wp_test_mavlink.py
3rd/: gtest.wrap  minizip.wrap.tmpl
examples/01_HelloWorld/: cfg_HelloWorld.xml
examples/02_Example_WaterwaySearch/: AStar.py  AvoidanceLogic.py  Follow_SquarePath.py  RaceTrack.py  Return2RouteFunctions_TestScript.py  Return_to_Route_Script.py  Return_to_Route_functions.py  Return_to_Route_main.py  Return_to_Route_v2.py  RunPythonWithAmase.py  Scenario_WaterwaySearch.xml  UAVDataHolder.py  UAVHeading.py  UAVLine.py  UAV_waypointListTest.py  WSG84Test.py  cfg_WaterwaySearch.xml  clothoidTest.py  dubinsUAV.py  dubins_Return2Route.py  lineSegmentAoE.py  testastar.py  uavData.py  uxasLMCP_reader.py
examples/02_Example_WaterwaySearch/MessagesToSend/: AirVehicleConfiguration_V500.xml  AirVehicleState_V500.xml
examples/07_PythonWithAmase/: RunPythonWithAmase.py
examples/AMASETest/: cfg.xml  foo.bak  foo.xml  go.sh
examples/AStarCollisionAvoidance/: runUxAS.sh  start_mission.py
examples/AStarCollisionAvoidance/MessageLibrary/: ko_zone.xml
examples/IDEAS_HockingSearch/: LINE_Waterway_Deschutes.kml  QGCwaypoint.plan  Scenario_HockingSearch.xml  cfg_HockingSearch.xml  lmcp-listen-send.py  lmcp-listen.py  mission_upload_and_dowload.py  runAMASE_HockingSearch.sh  runUxAS_HockingSearch.sh  wp_test_mavlink.py  wp_test_mavlink_Orriginal.py
examples/IDEAS_OlentangySearch/: Scenario_OlentangySearch.xml  cfg_OlentangySearch.xml  runAMASE_OlentangySearch.sh  runUxAS_OlentangySearch.sh
examples/Px4Test/: amase.xml  cfg_PX4Only.xml  cfg_PX4_Test.xml  go.sh
examples/TEST_dynamic_env/: RunPythonWithAmase.py  Scenario_Output.xml  add_noflyzone.py  cfg_TEST.xml  change_tasks.py  gen_waypts.py  start_mission.py
examples/TEST_task_update/: start_mission.py
examples/uav0LineSearch_avoid_uav1Heading/: start_mission.py
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
src/Communications/: LmcpObjectNetworkServer.cpp  LmcpObjectNetworkServer.h  LmcpObjectNetworkTcpBridge.cpp  ZeroMqAddressedAttributedMessageTcpReceiverSender.cpp  ZeroMqZyreBridge.h
src/Pixhawk/: PixhawkService.cpp  PixhawkService.h  TestME.cpp  TestME.h  foo.hpp  meson.build
src/Services/: 00_ServiceList.h  01_HelloWorld.cpp  meson.build
src/Tasks/: TaskManagerService.cpp
src/Utilities/: UxAS_Log.h
(+45 files in other folders)
